syntax = "proto3";

package sqs;

import "empty.proto";

option go_package = "./sqs";

message SQSReceiveMessageRequest {
    int64 visibility_timeout = 1;
    int64 wait_time = 2;
    int64 maximum_number_of_messages = 3;
}

message SQSResponseMessage {
    string messageID = 1;
    string messageBody = 2;
}

message SQSReceiveMessageResponse {
    repeated SQSResponseMessage messages = 1;
}

message SQSDeleteMessageRequest {
    string messageID = 1;
}

message SQSDeleteMessageResponse {
    bool isDeleted = 1;
}


service SQSService {
    rpc ReceiveMessage (SQSReceiveMessageRequest) returns (SQSReceiveMessageResponse);
    rpc DeleteMessage (SQSDeleteMessageRequest) returns (google.protobuf.Empty);
}